# COMP.SE.610-Software-Engineering-Project-1

./: .gitignore  .pylintrc  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
docs/: slack.md
res/: events-sample.json
src/: botlog.py  environ.example.py  environ.py  main.py  timer.py  utils.py
src/docs/: Slack.md
src/errorhandler/: __init__.py  httprequesterrorhandler.py
src/google/: __init__.py  googlerequest.py
src/google/googlecalendar/: __init__.py
src/googlecalendar/: event.py
src/googlegroups/: __init__.py  calendar.py  calendarevents.py
src/googleservices/: __init__.py  buildservice.py  calendarevents.py  googleevents.py  googlegroups.py  googlerequest.py  groups.py  utils.py
src/googleservices/googlecalendar/: __init__.py  event.py
src/googleservices/googlegroups/: __init__.py
src/lyyti/: __init__.py  events.py  lyytirequest.py  participants.py
src/slack/: __init__.py  bot.py  channel.py  slack.py  slackBot.py
src/slackbot/: channel.py
test/: example_test.py  testutils.py  utils_test.py
test/googleservices/: buildservice_test.py  calendarevents_test.py  groups_test.py  utils_test.py
test/lyyti/: events_test.py  lyytirequest_test.py  participants_test.py
test/lyyti_tests/: lyytirequest_test.py
test/res/: events-sample.json  participants-sample.json  past-events-sample.json
