[project]
name = "Univincity-throw-in-bot"
description = "Univincity-throw-in-bot"
version = "0.2.0"
dependencies = [
    "requests",
    "types-requests",
    "slack_sdk",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]